<resources>
    <string name="app_name">Memo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <!--Navigation String-->
    <string name="nav_title_decks">单词本</string>
    <string name="nav_title_card_browser">卡片浏览</string>
    <string name="nav_title_statistics">统计</string>
    <string name="nav_title_others">其他</string>
    <string name="nav_title_feedback">反馈</string>


    <!--MemoActivity String-->
    <string name="memo_learned">已学习：</string>
    <string name="memo_new_cards">未学习：</string>
    <string name="memo_today_cards">今日卡片数目：</string>
    <string name="memo_start_learn">开始学习</string>
    <string name="memo_today">今天</string>

    <string name="memo_change_deck">更换单词本</string>
    <string name="memo_active_detail">详情：</string>
    <string name="memo_active_deck">当前在学习：</string>
    <string name="memo_decks">单词本</string>

    <!--FloatButton String-->
    <string name="float_btn_add_card">添加卡片</string>
    <string name="float_btn_add_deck">创建单词本</string>
    <string name="float_btn_Reminder">添加提醒</string>
    <string name="float_btn_close">关闭</string>
    <string name="title_activity_settings">设置</string>


    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!--Study Plan-->
    <string name="pref_header_study_plan">学习和计划</string>

    <string name="pref_title_study_load_new">新卡片</string>
    <string name="pref_summary_study_load_new">计划每日学习新卡片的数量</string>

    <string name="pref_title_study_load_old">复习</string>
    <string name="pref_summary_study_load_old">计划每日复习卡片的数量</string>

    <string name="pref_title_study_order">学习顺序</string>
    <string name="pref_summary_study_order">设置新卡片和复习的学习顺序</string>
    <string-array name="pref_order_titles">
        <item>新卡片和复习混合进行</item>
        <item>复习后再学习新卡片</item>
        <item>学习新卡片后再复习</item>
    </string-array>
    <string-array name="pref_order_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_next_day_begin">下一天开始时间</string>
    <string name="pref_summary_next_day_begin">下一天开始时，时间间隔为0的卡片会进入复习队列（在此之前它的时间间隔为1天）</string>


    <string name="pref_category_others">其他</string>
    <string name="pref_title_keep_screen_on">保持屏幕常亮</string>

    <string name="pref_title_find_dictionary">查找词典</string>
    <string name="pref_summary_find_dictionary">制定查词功能的词典来源</string>
    <string-array name="pref_dictionary_titles">
        <item>有道词典</item>
        <item>必应词典</item>
        <item>灵格斯词典</item>
    </string-array>
    <string-array name="pref_dictionary_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--Language and font-->
    <string name="pref_header_font">语言和字体</string>
    <string name="pref_title_language">语言</string>
    <string name="pref_summary_language">指定Memo软件显示的语言</string>

    <string name="pref_title_font_family">字体</string>
    <string name="pref_title_font_size">字号</string>

    <!--About-->
    <string name="pref_header_about">关于</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">系统同步设置</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">消息通知</string>

    <string name="pref_title_new_message_notifications">新消息提醒</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">振动</string>
</resources>
