<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_study_plan">

        <EditTextPreference
            android:key="key_editText_study_load_new"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_title_study_load_new"
            android:summary="@string/pref_summary_study_load_new" />

        <EditTextPreference
            android:key="key_editText_study_load_old"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_title_study_load_old"
            android:summary="@string/pref_summary_study_load_old" />

        <ListPreference
            android:key="key_list_study_order"
            android:title="@string/pref_title_study_order"
            android:summary="@string/pref_summary_study_order"
            android:entries="@array/pref_order_titles"
            android:entryValues="@array/pref_order_values"
            android:defaultValue="1" />

        <EditTextPreference
            android:key="key_editText_next_day_begin"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/pref_title_next_day_begin"
            android:summary="@string/pref_summary_next_day_begin" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_others">
        <SwitchPreference
            android:key="key_switch_screen_on"
            android:title="@string/pref_title_keep_screen_on"
            android:defaultValue="true" />
        <ListPreference
            android:key="key_list_dictionary"
            android:title="@string/pref_title_find_dictionary"
            android:summary="@string/pref_summary_find_dictionary"
            android:entries="@array/pref_dictionary_titles"
            android:entryValues="@array/pref_dictionary_values"
            android:defaultValue="1" />
    </PreferenceCategory>

</PreferenceScreen>
