<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_decks"
            android:icon="@mipmap/ic_list_black_24dp"
            android:title="@string/nav_title_decks" />
        <item
            android:id="@+id/nav_card_browser"
            android:icon="@mipmap/ic_search_black_24dp"
            android:title="@string/nav_title_card_browser" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@mipmap/ic_equalizer_black_24dp"
            android:title="@string/nav_title_statistics" />
    </group>

    <item android:title="@string/nav_title_others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/ic_feedback_black_24dp"
                android:title="@string/nav_title_feedback" />
        </menu>
    </item>

</menu>
