<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_font">
        <ListPreference
            android:key="key_list_language"
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:title="@string/pref_title_language"
            android:summary="@string/pref_summary_language"/>

        <ListPreference
            android:key="key_list_font_family"
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:title="@string/pref_title_font_family" />

        <ListPreference
            android:key="key_list_font_size"
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:title="@string/pref_title_font_size" />
    </PreferenceCategory>
</PreferenceScreen>
