<preference-headers
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.sealiu.memo.SettingsActivity$StudyPlaneFragment"
        android:icon="@mipmap/ic_assignment_black_24dp"
        android:title="@string/pref_header_study_plan" />

    <header
        android:fragment="com.sealiu.memo.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@mipmap/ic_notifications_none_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.sealiu.memo.SettingsActivity$LanguageFontPreferenceFragment"
        android:icon="@mipmap/ic_font_download_black_24dp"
        android:title="@string/pref_header_font" />

    <header
        android:fragment="com.sealiu.memo.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@mipmap/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.sealiu.memo.SettingsActivity$AboutPreferenceFragment"
        android:icon="@mipmap/ic_info_outline_black_24dp"
        android:title="@string/pref_header_about" />

</preference-headers>
