<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_memo"
    tools:context="com.sealiu.memo.MemoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/lightGray"
        android:layout_marginTop="@dimen/fab_margin"
        android:padding="@dimen/memo_extra_small_margin">
        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_check_black_24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/fab_margin" />
            <TextView
                android:id="@+id/tv_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fab_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/memo_today"
                android:textColor="@color/primaryText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_new_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memo_new_cards"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/memo_small_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/tv_today_cards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memo_today_cards"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/memo_small_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/tv_learned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memo_learned"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/memo_small_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/secondaryText" />

            <Button
                android:id="@+id/btn_start_learn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/memo_start_learn" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/memo_extra_large_margin"
        android:padding="@dimen/memo_extra_small_margin"
        android:background="@color/lightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_book_black_24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/fab_margin" />

            <TextView
                android:id="@+id/tv_decks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fab_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/memo_decks"
                android:textColor="@color/primaryText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_active_deck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/memo_small_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/memo_active_deck"
                android:textColor="@color/secondaryText" />

            <TextView
                android:id="@+id/tv_active_detail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/memo_small_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/memo_active_detail"
                android:textColor="@color/secondaryText" />

            <Button
                android:id="@+id/btnChangeDeck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="@string/memo_change_deck" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
